--- a/wp-content/themes/understrap-child/src/sass/theme/_child_theme.scss
+++ b/wp-content/themes/understrap-child/src/sass/theme/_child_theme.scss
@@ -547,7 +547,7 @@ align-items: center;
   height: 70vmin;
   max-height: 500px;
   @media (min-width: 1200px) {
-    height: 50vmin;
+    height: 500px;
     max-height: 500px;
   }
   img {
@@ -584,7 +584,7 @@ align-items: center;
   margin-right: 0;
   margin-bottom: 0;
   margin-left: 0;
-  border-top: 3px solid #000;
+  border-top: 1px solid #000;
   .active {
     background-color: #92e8ff;
   }
@@ -677,24 +677,24 @@ width: fit-content;
   // }
 }
 .ox-partners-home.ox-partners-home {
-  @media (max-width: 768px) {
-    position: relative!important;
-    right: unset!important;
-    bottom: unset!important;
-    z-index: 1019!important;
-  }
-  @media (max-height: 690px) {
-    position: relative!important;
-    right: unset!important;
-    bottom: unset!important;
-    z-index: 1019!important;
-  }
-  @media (min-width: 1400px) {
-    position: fixed!important;
-    right: 0!important;
-    bottom: 0!important;
-    left: 0!important;
-  }
+  // @media (max-width: 768px) {
+  //   position: relative!important;
+  //   right: unset!important;
+  //   bottom: unset!important;
+  //   z-index: 1019!important;
+  // }
+  // @media (max-height: 690px) {
+  //   position: relative!important;
+  //   right: unset!important;
+  //   bottom: unset!important;
+  //   z-index: 1019!important;
+  // }
+  // @media (min-width: 1400px) {
+  //   position: fixed!important;
+  //   right: 0!important;
+  //   bottom: 0!important;
+  //   left: 0!important;
+  // }
 }
 
 .navbar-nav li.ox-home-btn{
